--- a/assets/scss/_preset.scss
+++ b/assets/scss/_preset.scss
@@ -23,4 +23,8 @@ a {
   text-decoration: none;
 }
 
-
+%flexBetweenCenter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
