--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,114 +1,4 @@
-// Header Style Start
-.sub-header {
-  background-color: #fff;
-  padding: 8px 0;
-  border-bottom: 1px solid #f1f1f1;
-  .welcome-message {
-    font-family: $fontPoppins;
-    font-size: 12px;
-    font-weight: 600;
-    line-height: 1;
-    letter-spacing: 1px;
-    color: #443a44;
-    text-transform: uppercase;
-    @media (max-width: 767px) {
-      margin-bottom: 8px;
-    }
-  }
-  .contacts {
-    a {
-      display: inline-block;
-      font-family: $fontPoppins;
-      font-size: 12px;
-      color: #4a4a4a;
-      text-transform: uppercase;
-      text-decoration: none;
-      @media (min-width: 992px) {
-        font-size: 14px;
-      }
-    }
-  }
-  .social-icons {
-    a {
-      font-family: $fontPoppins;
-      font-size: 14px;
-      color: #4a4a4a;
-      text-transform: uppercase;
-      text-decoration: none;
-      padding: 4px;
-      margin: 0 4px;
-      &:last-child {
-        margin-right: 0;
-      }
-    }
-  }
-}
-.navbar-brand {
-  transition: 0.4s;
-}
-.mobile-toggle {
-  transition: 0.4s ease-in-out;
-}
-.header {
-  transition: 0.4s;
-  position: fixed;
-  width: 100%;
-  top: 46px;
-  overflow: hidden;
-//   z-index: 99;
-
-  .navbar {
-    transition: 0.4s;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),
-      0 1px 5px rgba(0, 0, 0, 0.08);
-
-    .navbar-nav {
-      .nav-item {
-        transition: 0.6s ease-in;
-        @media (min-width: 992px) {
-          margin: 0 12px;
-        }
-        .nav-link {
-          font-size: 14px;
-          color: #19506d;
-          text-transform: uppercase;
-          font-family: $fontPoppins;
-          transition: 0.3s ease-in;
-          letter-spacing: 0.4px;
-          &:hover {
-            color: #267ae9;
-          }
-          &::after {
-            display: none;
-          }
-        }
-        .nav-link.active {
-          font-weight: 600;
-        }
-      }
-    }
-    .btn-login {
-      width: 180px;
-      font-size: 14px;
-      background-color: #f95732;
-      color: #fff;
-      border-radius: 0;
-      box-shadow: none;
-    }
-  }
-}
-
-// OffCanvas Navigation on Mobile Screen Start
-/////////////////////////////////////////////
-
-body.offcanvas-active {
-  overflow: hidden;
-}
-
-.offcanvas-header {
-  display: none;
-}
-
+// OffCanvas Screen Darken
 .screen-darken {
   height: 100%;
   width: 0%;
@@ -119,46 +9,193 @@ body.offcanvas-active {
   opacity: 0;
   visibility: hidden;
   background-color: rgba(34, 34, 34, 0.6);
-  transition: opacity 0.2s linear, visibility 0.2s, width 2s ease-in;
+  transition: opacity 0.2s linear, visibility 0.3s, width 4s ease-in;
 }
-
 .screen-darken.active {
   z-index: 10;
-  transition: opacity 0.3s ease, width 0s;
+  transition: opacity 0.2s ease, width 0s;
   opacity: 1;
   width: 100%;
   visibility: visible;
 }
-
-/* ============ mobile view ============ */
-@media all and (max-width: 991px) {
-  .offcanvas-header {
-    display: block;
+.header {
+  position: relative;
+  // Sub Header Start
+  .sub-header {
+    background-color: transparent;
+    padding: 8px 0;
+    width: 100%;
+    position: absolute;
+    transition: 0.4s ease;
+    .container {
+      @extend %flexBetweenCenter;
+      .contacts {
+        a {
+          display: inline-block;
+          font-family: $fontPoppins;
+          font-size: 12px;
+          color: $whiteColor;
+          text-transform: uppercase;
+          text-decoration: none;
+          transition: 0.4s ease;
+          @media (min-width: 992px) {
+            font-size: 14px;
+          }
+        }
+      }
+      .social-icons {
+        a {
+          font-family: $fontPoppins;
+          font-size: 14px;
+          color: $whiteColor;
+          text-transform: uppercase;
+          text-decoration: none;
+          padding: 4px;
+          margin: 0 4px;
+          transition: 0.4s ease;
+          &:last-child {
+            margin-right: 0;
+          }
+        }
+      }
+    }
   }
-
-  .mobile-offcanvas {
-    visibility: hidden;
-    transform: translateX(-100%);
-    border-radius: 0;
-    display: block;
+  // Mobile Menu Toggle Start
+  .mobile-toggle {
+    width: 100%;
     position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 80%;
-    z-index: 1200;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    transition: visibility 0.3s ease-in-out, transform 0.3s ease-in-out;
+    top: 45px;
+    z-index: 9;
+    transition: 0.4s ease;
+    .container {
+      @extend %flexBetweenCenter;
+      .navbar-brand {
+        color: $whiteColor;
+      }
+      .navbar-toggler {
+        color: $whiteColor;
+      }
+    }
+    @media (min-width: 992px) {
+      display: none;
+    }
   }
+  // Navbar Start
+  .navbar {
+    width: 100%;
+    position: fixed;
+    top: 45px;
+    z-index: 9;
+    transition: 0.4s ease;
+    .navbar-nav {
+      .nav-item {
+        transition: 0.4s ease;
+        @media (min-width: 992px) {
+          margin: 0 12px;
+        }
+        .nav-link {
+          font-size: 14px;
+          color: $themePrimary;
+          text-transform: uppercase;
+          font-family: $fontPoppins;
+          transition: 0.4s ease;
+          letter-spacing: 0.4px;
+          &:hover {
+            color: #267ae9;
+          }
+          &::after {
+            display: none;
+          }
+          @media (min-width: 992px) {
+            color: $whiteColor;
+          }
+        }
+        .nav-link.active {
+          font-weight: 500;
+        }
+        .dropdown {
+          .dropdown-menu {
+            box-shadow: 0 6px 12px #0000002d;
+            border-radius: 0;
+            border: none;
+            display: none;
 
-  .mobile-offcanvas.show {
-    visibility: visible;
-    transform: translateX(0);
+            li {
+              margin: 8px auto;
+              .dropdown-item {
+                color: #19506d;
+                font-family: $fontPoppins;
+                font-size: 14px;
+                text-transform: uppercase;
+                transition: 0.4s ease;
+                &:hover {
+                  color: #267ae9;
+                }
+                &:active {
+                  background-color: #fff;
+                }
+              }
+            }
+          }
+          &:hover {
+            .dropdown-animated {
+              display: block;
+              // margin-top: 10px;
+              transform-origin: top;
+              animation: dropdownSlideDown 500ms ease-in-out forwards;
+            }
+          }
+        }
+      }
+    }
+    .btn-login {
+      width: 186px;
+      font-size: 14px;
+      background-color: #f95732;
+      color: #fff;
+      border-radius: 0;
+      box-shadow: none;
+    }
   }
-  .mobile-offcanvas {
-    display: block;
+  // OffCanvas Navigation Start
+  // .offcanvas-active {
+  //   overflow: hidden;
+  // }
+  .offcanvas-header {
+    @extend %flexBetweenCenter;
+    width: 100%;
+    padding: 0;
+    .navbar-brand {
+      @media (min-width: 992px) {
+        color: $whiteColor;
+      }
+    }
+    .btn-close {
+      @media (min-width: 992px) {
+        display: none;
+      }
+    }
+  }
+  @media (max-width: 991px) {
+    .mobile-offcanvas {
+      visibility: hidden;
+      transform: translateX(-100%);
+      border-radius: 0;
+      display: block;
+      position: fixed;
+      top: 0 !important;
+      left: 0;
+      height: 100%;
+      width: 80%;
+      z-index: 1200;
+      overflow-x: hidden;
+      transition: visibility 0.3s ease, transform 0.4s ease;
+    }
+
+    .mobile-offcanvas.show {
+      visibility: visible;
+      transform: translateX(0);
+      background-color: $whiteColor;
+    }
   }
 }
-/////////////////////////////////
-// Header Style End
