Header Transparent and On Scroll with Mobile Off Canvas Menu

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -8,6 +8,7 @@ $blackColor: #000000;
 $whiteColor: #ffffff;
 
 $themePrimary: #00aeef;
+$themeSecondary: #543ab7;
 $themeHeading: #2f3336;
 $themeTextDark: #2e3235;
 $themeTextGrey1: #889198;
