--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,16 +21,17 @@ body ::-webkit-scrollbar-track {
 
 html ::-webkit-scrollbar-thumb,
 body ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #7159cb;
 }
 
 html ::-webkit-scrollbar-thumb:hover,
 body ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #543ab7;
 }
 
 a {
   text-decoration: none;
+  display: inline-block;
 }
 
 .header .sub-header .container, .header .mobile-toggle .container, .header .offcanvas-header {
@@ -230,9 +231,9 @@ a {
 }
 
 .banner {
-  background: -webkit-linear-gradient(30deg, #543ab7 0%, #00acc1 100%);
-  background: -o-linear-gradient(30deg, #543ab7 0%, #00acc1 100%);
-  background: linear-gradient(60deg, #543ab7 0%, #00acc1 100%);
+  background: -webkit-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
+  background: -o-linear-gradient(30deg, #543ab7 0%, #00aeef 100%);
+  background: linear-gradient(60deg, #543ab7 0%, #00aeef 100%);
 }
 
 .banner .inner-banner {
@@ -304,7 +305,7 @@ a {
   content: "";
   width: 12px;
   height: 12px;
-  border: 2px solid #2eaeff;
+  border: 2px solid #00aeef;
   border-radius: 50%;
   position: absolute;
   left: -30px;
@@ -354,35 +355,26 @@ a {
   transition: 0.4s ease;
 }
 
-.header .sub-header .container .contacts a {
-  display: inline-block;
+.header .sub-header .container {
   font-family: "Poppins", sans-serif;
-  font-size: 12px;
+  font-size: 14px;
+}
+
+.header .sub-header .container .contacts a {
   color: #ffffff;
-  text-transform: uppercase;
-  text-decoration: none;
   -webkit-transition: 0.4s ease;
   -o-transition: 0.4s ease;
   transition: 0.4s ease;
-}
-
-@media (min-width: 992px) {
-  .header .sub-header .container .contacts a {
-    font-size: 14px;
-  }
 }
 
 .header .sub-header .container .social-icons a {
-  font-family: "Poppins", sans-serif;
-  font-size: 14px;
   color: #ffffff;
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 4px;
-  margin: 0 4px;
   -webkit-transition: 0.4s ease;
   -o-transition: 0.4s ease;
   transition: 0.4s ease;
+  text-transform: capitalize;
+  padding: 4px;
+  margin: 0 4px;
 }
 
 .header .sub-header .container .social-icons a:last-child {
@@ -401,16 +393,38 @@ a {
 
 .header .mobile-toggle .container .navbar-brand {
   color: #ffffff;
+  font-weight: 500;
+  -webkit-transition: 0.4s ease;
+  -o-transition: 0.4s ease;
+  transition: 0.4s ease;
 }
 
 .header .mobile-toggle .container .navbar-toggler {
   color: #ffffff;
+  -webkit-transition: 0.4s ease;
+  -o-transition: 0.4s ease;
+  transition: 0.4s ease;
 }
 
 @media (min-width: 992px) {
   .header .mobile-toggle {
     display: none;
   }
+}
+
+.header .mobile-toggle-dark {
+  background-color: #ffffff;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.08);
+          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.08);
+  top: 0;
+}
+
+.header .mobile-toggle-dark .container .navbar-brand {
+  color: #543ab7;
+}
+
+.header .mobile-toggle-dark .container .navbar-toggler {
+  color: #543ab7;
 }
 
 .header .navbar {
@@ -436,9 +450,10 @@ a {
 }
 
 .header .navbar .navbar-nav .nav-item .nav-link {
+  position: relative;
   font-size: 14px;
-  color: #00aeef;
-  text-transform: uppercase;
+  color: #2e3235;
+  text-transform: capitalize;
   font-family: "Poppins", sans-serif;
   -webkit-transition: 0.4s ease;
   -o-transition: 0.4s ease;
@@ -446,12 +461,32 @@ a {
   letter-spacing: 0.4px;
 }
 
-.header .navbar .navbar-nav .nav-item .nav-link:hover {
-  color: #267ae9;
+.header .navbar .navbar-nav .nav-item .nav-link::after {
+  content: "";
+  position: absolute;
+  width: calc(100% - 12px);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  background: #ffffff;
+  -webkit-transform: scaleX(0);
+      -ms-transform: scaleX(0);
+       -o-transform: scaleX(0);
+          transform: scaleX(0);
+  -webkit-transition: -webkit-transform 0.4s ease;
+  transition: -webkit-transform 0.4s ease;
+  -o-transition: -o-transform 0.4s ease;
+  transition: transform 0.4s ease;
+  transition: transform 0.4s ease, -webkit-transform 0.4s ease, -o-transform 0.4s ease;
 }
 
-.header .navbar .navbar-nav .nav-item .nav-link::after {
-  display: none;
+.header .navbar .navbar-nav .nav-item .nav-link:hover::after {
+  -webkit-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+       -o-transform: scaleX(1);
+          transform: scaleX(1);
 }
 
 @media (min-width: 992px) {
@@ -462,6 +497,18 @@ a {
 
 .header .navbar .navbar-nav .nav-item .nav-link.active {
   font-weight: 500;
+}
+
+.header .navbar .navbar-nav .nav-item .nav-link.active::after {
+  -webkit-transform: scaleX(1);
+      -ms-transform: scaleX(1);
+       -o-transform: scaleX(1);
+          transform: scaleX(1);
+  -webkit-transition: -webkit-transform 0.4s ease;
+  transition: -webkit-transform 0.4s ease;
+  -o-transition: -o-transform 0.4s ease;
+  transition: transform 0.4s ease;
+  transition: transform 0.4s ease, -webkit-transform 0.4s ease, -o-transform 0.4s ease;
 }
 
 .header .navbar .navbar-nav .nav-item .dropdown .dropdown-menu {
@@ -480,18 +527,18 @@ a {
   color: #19506d;
   font-family: "Poppins", sans-serif;
   font-size: 14px;
-  text-transform: uppercase;
+  text-transform: capitalize;
   -webkit-transition: 0.4s ease;
   -o-transition: 0.4s ease;
   transition: 0.4s ease;
 }
 
 .header .navbar .navbar-nav .nav-item .dropdown .dropdown-menu li .dropdown-item:hover {
-  color: #267ae9;
+  color: #00aeef;
 }
 
 .header .navbar .navbar-nav .nav-item .dropdown .dropdown-menu li .dropdown-item:active {
-  background-color: #fff;
+  background-color: #ffffff;
 }
 
 .header .navbar .navbar-nav .nav-item .dropdown:hover .dropdown-animated {
@@ -506,13 +553,90 @@ a {
 }
 
 .header .navbar .btn-login {
-  width: 186px;
-  font-size: 14px;
-  background-color: #f95732;
-  color: #fff;
-  border-radius: 0;
+  position: relative;
+  width: 188px;
+  border: 2px solid #543ab7;
+  color: #543ab7;
   -webkit-box-shadow: none;
           box-shadow: none;
+  overflow: hidden;
+  -webkit-transition: 0.4s ease;
+  -o-transition: 0.4s ease;
+  transition: 0.4s ease;
+}
+
+.header .navbar .btn-login::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  right: 0;
+  bottom: 0;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  margin: auto;
+  margin-left: -150px;
+  -webkit-transition: -webkit-box-shadow 0.4s ease-out;
+  transition: -webkit-box-shadow 0.4s ease-out;
+  -o-transition: box-shadow 0.4s ease-out;
+  transition: box-shadow 0.4s ease-out;
+  transition: box-shadow 0.4s ease-out, -webkit-box-shadow 0.4s ease-out;
+  z-index: -1;
+}
+
+.header .navbar .btn-login:hover {
+  color: #ffffff;
+}
+
+.header .navbar .btn-login:hover::before {
+  -webkit-box-shadow: inset 0 0 0 10em #543ab7;
+          box-shadow: inset 0 0 0 10em #543ab7;
+}
+
+@media (min-width: 992px) {
+  .header .navbar .btn-login {
+    color: #ffffff;
+  }
+}
+
+.header .navbar-sticky-dark {
+  background-color: #ffffff;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.08);
+          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.08);
+  top: 0;
+}
+
+.header .navbar-sticky-dark .offcanvas-header .navbar-brand {
+  color: #543ab7;
+}
+
+.header .navbar-sticky-dark .navbar-nav .nav-item .nav-link {
+  color: #2e3235;
+}
+
+.header .navbar-sticky-dark .navbar-nav .nav-item .nav-link:hover {
+  color: #543ab7;
+}
+
+.header .navbar-sticky-dark .navbar-nav .nav-item .nav-link:hover::after {
+  background-color: #543ab7;
+}
+
+.header .navbar-sticky-dark .navbar-nav .nav-item .nav-link.active {
+  color: #543ab7;
+}
+
+.header .navbar-sticky-dark .navbar-nav .nav-item .nav-link.active::after {
+  background-color: currentColor;
+}
+
+.header .navbar-sticky-dark .btn-login {
+  color: #543ab7;
+}
+
+.header .navbar-sticky-dark .btn-login:hover {
+  color: #ffffff;
 }
 
 .header .offcanvas-header {
