--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -78,8 +78,8 @@
   //   text-align: center;
   background: linear-gradient(
     60deg,
-    rgba(84, 58, 183, 1) 0%,
-    rgba(0, 172, 193, 1) 100%
+    rgba($themeSecondary, 1) 0%,
+    rgba($themePrimary, 1) 100%
   );
   //   color: white;
   .inner-banner {
@@ -131,7 +131,7 @@
     content: "";
     width: 12px;
     height: 12px;
-    border: 2px solid #2eaeff;
+    border: 2px solid $themePrimary;
     border-radius: 50%;
     position: absolute;
     left: -30px;
