--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -29,30 +29,21 @@
     transition: 0.4s ease;
     .container {
       @extend %flexBetweenCenter;
+      font-family: $fontPoppins;
+      font-size: 14px;
       .contacts {
         a {
-          display: inline-block;
-          font-family: $fontPoppins;
-          font-size: 12px;
           color: $whiteColor;
-          text-transform: uppercase;
-          text-decoration: none;
           transition: 0.4s ease;
-          @media (min-width: 992px) {
-            font-size: 14px;
-          }
         }
       }
       .social-icons {
         a {
-          font-family: $fontPoppins;
-          font-size: 14px;
           color: $whiteColor;
-          text-transform: uppercase;
-          text-decoration: none;
+          transition: 0.4s ease;
+          text-transform: capitalize;
           padding: 4px;
           margin: 0 4px;
-          transition: 0.4s ease;
           &:last-child {
             margin-right: 0;
           }
@@ -71,13 +62,30 @@
       @extend %flexBetweenCenter;
       .navbar-brand {
         color: $whiteColor;
+        font-weight: 500;
+        transition: 0.4s ease;
       }
       .navbar-toggler {
         color: $whiteColor;
+        transition: 0.4s ease;
       }
     }
     @media (min-width: 992px) {
       display: none;
+    }
+  }
+  .mobile-toggle-dark {
+    background-color: $whiteColor;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),
+      0 1px 5px rgba(0, 0, 0, 0.08);
+    top: 0;
+    .container {
+      .navbar-brand {
+        color: $themeSecondary;
+      }
+      .navbar-toggler {
+        color: $themeSecondary;
+      }
     }
   }
   // Navbar Start
@@ -94,24 +102,42 @@
           margin: 0 12px;
         }
         .nav-link {
+          position: relative;
           font-size: 14px;
-          color: $themePrimary;
-          text-transform: uppercase;
+          color: $themeTextDark;
+          text-transform: capitalize;
           font-family: $fontPoppins;
           transition: 0.4s ease;
           letter-spacing: 0.4px;
-          &:hover {
-            color: #267ae9;
-          }
           &::after {
-            display: none;
+            content: "";
+            position: absolute;
+            width: calc(100% - 12px);
+            height: 2px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+            background: $whiteColor;
+            transform: scaleX(0);
+            transition: transform 0.4s ease;
           }
+          &:hover {
+            &::after {
+              transform: scaleX(1);
+            }
+          }
+
           @media (min-width: 992px) {
             color: $whiteColor;
           }
         }
         .nav-link.active {
           font-weight: 500;
+          &::after {
+            transform: scaleX(1);
+            transition: transform 0.4s ease;
+          }
         }
         .dropdown {
           .dropdown-menu {
@@ -126,13 +152,13 @@
                 color: #19506d;
                 font-family: $fontPoppins;
                 font-size: 14px;
-                text-transform: uppercase;
+                text-transform: capitalize;
                 transition: 0.4s ease;
                 &:hover {
-                  color: #267ae9;
+                  color: $themePrimary;
                 }
                 &:active {
-                  background-color: #fff;
+                  background-color: $whiteColor;
                 }
               }
             }
@@ -140,7 +166,6 @@
           &:hover {
             .dropdown-animated {
               display: block;
-              // margin-top: 10px;
               transform-origin: top;
               animation: dropdownSlideDown 500ms ease-in-out forwards;
             }
@@ -149,14 +174,77 @@
       }
     }
     .btn-login {
-      width: 186px;
-      font-size: 14px;
-      background-color: #f95732;
-      color: #fff;
-      border-radius: 0;
+      position: relative;
+      width: 188px;
+      border: 2px solid $themeSecondary;
+      color: $themeSecondary;
       box-shadow: none;
+      overflow: hidden;
+      transition: 0.4s ease;
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 50%;
+        right: 0;
+        bottom: 0;
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+        margin: auto;
+        margin-left: -150px;
+        transition: box-shadow 0.4s ease-out;
+        z-index: -1;
+      }
+      &:hover {
+        color: $whiteColor;
+        &::before {
+          box-shadow: inset 0 0 0 10em $themeSecondary;
+        }
+      }
+      @media (min-width: 992px) {
+        color: $whiteColor;
+      }
     }
   }
+
+  .navbar-sticky-dark {
+    background-color: $whiteColor;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15),
+      0 1px 5px rgba(0, 0, 0, 0.08);
+    top: 0;
+    .offcanvas-header {
+      .navbar-brand {
+        color: $themeSecondary;
+      }
+    }
+    .navbar-nav {
+      .nav-item {
+        .nav-link {
+          color: $themeTextDark;
+          &:hover {
+            color: $themeSecondary;
+            &::after {
+              background-color: $themeSecondary;
+            }
+          }
+        }
+        .nav-link.active {
+          color: $themeSecondary;
+          &::after {
+            background-color: currentColor;
+          }
+        }
+      }
+    }
+    .btn-login {
+      color: $themeSecondary;
+      &:hover {
+        color: $whiteColor;
+      }
+    }
+  }
+
   // OffCanvas Navigation Start
   // .offcanvas-active {
   //   overflow: hidden;
