--- a/assets/scss/_preset.scss
+++ b/assets/scss/_preset.scss
@@ -13,14 +13,15 @@ body {
     background: #f1f1f1;
   }
   ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: lighten($color: $themeSecondary, $amount: 10%);
   }
   ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: $themeSecondary;
   }
 }
 a {
   text-decoration: none;
+  display: inline-block;
 }
 
 %flexBetweenCenter {
