--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,7 +367,30 @@ a {
   transition: 0.4s ease;
 }
 
+.header .sub-header .container .social-icons {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .header .sub-header .container .social-icons a {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 32px;
+  height: 32px;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
   color: #ffffff;
   -webkit-transition: 0.4s ease;
   -o-transition: 0.4s ease;
@@ -375,10 +398,35 @@ a {
   text-transform: capitalize;
   padding: 4px;
   margin: 0 4px;
+  transition: 0.4s ease;
+}
+
+.header .sub-header .container .social-icons a:hover {
+  background-color: #ffffff;
+}
+
+.header .sub-header .container .social-icons a:first-child {
+  margin-left: 0;
 }
 
 .header .sub-header .container .social-icons a:last-child {
   margin-right: 0;
+}
+
+.header .sub-header .container .social-icons a.facebook:hover {
+  color: #3b5998;
+}
+
+.header .sub-header .container .social-icons a.instagram:hover {
+  color: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+}
+
+.header .sub-header .container .social-icons a.twitter:hover {
+  color: #00acee;
+}
+
+.header .sub-header .container .social-icons a.linkedin:hover {
+  color: #0077b5;
 }
 
 .header .mobile-toggle {
@@ -554,9 +602,9 @@ a {
 
 .header .navbar .btn-login {
   position: relative;
-  width: 188px;
-  border: 2px solid #543ab7;
-  color: #543ab7;
+  width: 186px;
+  border: 2px solid #ffffff;
+  color: #ffffff;
   -webkit-box-shadow: none;
           box-shadow: none;
   overflow: hidden;
@@ -586,12 +634,12 @@ a {
 }
 
 .header .navbar .btn-login:hover {
-  color: #ffffff;
+  color: #00aeef;
 }
 
 .header .navbar .btn-login:hover::before {
-  -webkit-box-shadow: inset 0 0 0 10em #543ab7;
-          box-shadow: inset 0 0 0 10em #543ab7;
+  -webkit-box-shadow: inset 0 0 0 10em #ffffff;
+          box-shadow: inset 0 0 0 10em #ffffff;
 }
 
 @media (min-width: 992px) {
@@ -632,11 +680,17 @@ a {
 }
 
 .header .navbar-sticky-dark .btn-login {
+  border: 2px solid #543ab7;
   color: #543ab7;
 }
 
 .header .navbar-sticky-dark .btn-login:hover {
   color: #ffffff;
+}
+
+.header .navbar-sticky-dark .btn-login:hover::before {
+  -webkit-box-shadow: inset 0 0 0 10em #543ab7;
+          box-shadow: inset 0 0 0 10em #543ab7;
 }
 
 .header .offcanvas-header {
