--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -38,14 +38,57 @@
         }
       }
       .social-icons {
+        display: flex;
         a {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 32px;
+          height: 32px;
+          border: 2px solid $whiteColor;
+          border-radius: 50%;
           color: $whiteColor;
           transition: 0.4s ease;
           text-transform: capitalize;
           padding: 4px;
           margin: 0 4px;
+          transition: 0.4s ease;
+          &:hover {
+            background-color: $whiteColor;
+          }
+          &:first-child {
+            margin-left: 0;
+          }
           &:last-child {
             margin-right: 0;
+          }
+        }
+        a.facebook {
+          &:hover {
+            color: #3b5998;
+          }
+        }
+        a.instagram {
+          &:hover {
+            // background: #d6249f;
+            color: radial-gradient(
+              circle at 30% 107%,
+              #fdf497 0%,
+              #fdf497 5%,
+              #fd5949 45%,
+              #d6249f 60%,
+              #285aeb 90%
+            );
+          }
+        }
+        a.twitter {
+          &:hover {
+            color: #00acee;
+          }
+        }
+        a.linkedin {
+          &:hover {
+            color: #0077b5;
           }
         }
       }
@@ -175,9 +218,9 @@
     }
     .btn-login {
       position: relative;
-      width: 188px;
-      border: 2px solid $themeSecondary;
-      color: $themeSecondary;
+      width: 186px;
+      border: 2px solid $whiteColor;
+      color: $whiteColor;
       box-shadow: none;
       overflow: hidden;
       transition: 0.4s ease;
@@ -197,9 +240,9 @@
         z-index: -1;
       }
       &:hover {
-        color: $whiteColor;
+        color: $themePrimary;
         &::before {
-          box-shadow: inset 0 0 0 10em $themeSecondary;
+          box-shadow: inset 0 0 0 10em $whiteColor;
         }
       }
       @media (min-width: 992px) {
@@ -238,9 +281,13 @@
       }
     }
     .btn-login {
+      border: 2px solid $themeSecondary;
       color: $themeSecondary;
       &:hover {
         color: $whiteColor;
+        &::before {
+          box-shadow: inset 0 0 0 10em $themeSecondary;
+        }
       }
     }
   }
