--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,7 +237,7 @@ a {
 }
 
 .banner .inner-banner {
-  height: 65vh;
+  height: 85vh;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -347,7 +347,7 @@ a {
 
 .header .sub-header {
   background-color: transparent;
-  padding: 8px 0;
+  padding: 12px 0;
   width: 100%;
   position: absolute;
   -webkit-transition: 0.4s ease;
@@ -358,13 +358,6 @@ a {
 .header .sub-header .container {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
-}
-
-.header .sub-header .container .contacts a {
-  color: #ffffff;
-  -webkit-transition: 0.4s ease;
-  -o-transition: 0.4s ease;
-  transition: 0.4s ease;
 }
 
 .header .sub-header .container .social-icons {
@@ -387,10 +380,11 @@ a {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 32px;
-  height: 32px;
+  width: 24px;
+  height: 24px;
   border: 2px solid #ffffff;
   border-radius: 50%;
+  font-size: 12px;
   color: #ffffff;
   -webkit-transition: 0.4s ease;
   -o-transition: 0.4s ease;
@@ -413,12 +407,52 @@ a {
   margin-right: 0;
 }
 
+@media (min-width: 992px) {
+  .header .sub-header .container .social-icons a {
+    width: 32px;
+    height: 32px;
+    font-size: 14px;
+    margin: 0 6px;
+  }
+}
+
 .header .sub-header .container .social-icons a.facebook:hover {
   color: #3b5998;
 }
 
-.header .sub-header .container .social-icons a.instagram:hover {
-  color: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285aeb 90%);
+.header .sub-header .container .social-icons a.instagram svg {
+  width: 12px;
+  height: 12px;
+}
+
+.header .sub-header .container .social-icons a.instagram svg stop {
+  stop-color: #ffffff;
+  -webkit-transition: 0.4s ease;
+  -o-transition: 0.4s ease;
+  transition: 0.4s ease;
+}
+
+@media (min-width: 992px) {
+  .header .sub-header .container .social-icons a.instagram svg {
+    width: 14px;
+    height: 14px;
+  }
+}
+
+.header .sub-header .container .social-icons a.instagram:hover svg .insta-color1 {
+  stop-color: #e09b3d;
+}
+
+.header .sub-header .container .social-icons a.instagram:hover svg .insta-color2 {
+  stop-color: #c74c4d;
+}
+
+.header .sub-header .container .social-icons a.instagram:hover svg .insta-color3 {
+  stop-color: #c21975;
+}
+
+.header .sub-header .container .social-icons a.instagram:hover svg .insta-color4 {
+  stop-color: #7024c4;
 }
 
 .header .sub-header .container .social-icons a.twitter:hover {
@@ -429,10 +463,24 @@ a {
   color: #0077b5;
 }
 
+.header .sub-header .container .contacts a {
+  color: #ffffff;
+  -webkit-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.header .sub-header .container .contacts a:hover {
+  -webkit-transform: scaleX(1.1);
+      -ms-transform: scaleX(1.1);
+       -o-transform: scaleX(1.1);
+          transform: scaleX(1.1);
+}
+
 .header .mobile-toggle {
   width: 100%;
   position: fixed;
-  top: 45px;
+  top: 48px;
   z-index: 9;
   -webkit-transition: 0.4s ease;
   -o-transition: 0.4s ease;
@@ -478,7 +526,7 @@ a {
 .header .navbar {
   width: 100%;
   position: fixed;
-  top: 45px;
+  top: 56px;
   z-index: 9;
   -webkit-transition: 0.4s ease;
   -o-transition: 0.4s ease;
@@ -648,6 +696,94 @@ a {
   }
 }
 
+@media (max-width: 991px) {
+  .header .navbar .offcanvas-header {
+    margin-bottom: 15px;
+  }
+  .header .navbar .offcanvas-header .navbar-brand {
+    color: #543ab7;
+  }
+  .header .navbar .offcanvas-header .btn-close {
+    margin-right: 1px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    opacity: 0.8;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  .header .navbar .offcanvas-header .btn-close svg {
+    fill: #543ab7;
+  }
+  .header .navbar .navbar-nav .nav-item {
+    margin-bottom: 12px;
+  }
+  .header .navbar .navbar-nav .nav-item .nav-link {
+    display: inline-block;
+    color: #2e3235;
+  }
+  .header .navbar .navbar-nav .nav-item .nav-link::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 4px;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color: #543ab7;
+    -webkit-transform: scaleX(0);
+        -ms-transform: scaleX(0);
+         -o-transform: scaleX(0);
+            transform: scaleX(0);
+    -webkit-transition: -webkit-transform 0.4s ease;
+    transition: -webkit-transform 0.4s ease;
+    -o-transition: -o-transform 0.4s ease;
+    transition: transform 0.4s ease;
+    transition: transform 0.4s ease, -webkit-transform 0.4s ease, -o-transform 0.4s ease;
+  }
+  .header .navbar .navbar-nav .nav-item .nav-link:hover {
+    color: #543ab7;
+  }
+  .header .navbar .navbar-nav .nav-item .nav-link:hover::after {
+    -webkit-transform: scaleX(1);
+        -ms-transform: scaleX(1);
+         -o-transform: scaleX(1);
+            transform: scaleX(1);
+  }
+  .header .navbar .navbar-nav .nav-item .nav-link.active {
+    font-weight: 500;
+    color: #543ab7;
+  }
+  .header .navbar .navbar-nav .nav-item .nav-link.active::after {
+    -webkit-transform: scaleX(1);
+        -ms-transform: scaleX(1);
+         -o-transform: scaleX(1);
+            transform: scaleX(1);
+    -webkit-transition: -webkit-transform 0.4s ease;
+    transition: -webkit-transform 0.4s ease;
+    -o-transition: -o-transform 0.4s ease;
+    transition: transform 0.4s ease;
+    transition: transform 0.4s ease, -webkit-transform 0.4s ease, -o-transform 0.4s ease;
+  }
+  .header .navbar .btn-login {
+    border: 2px solid #543ab7;
+    color: #543ab7;
+  }
+  .header .navbar .btn-login:hover {
+    color: #ffffff;
+  }
+  .header .navbar .btn-login:hover::before {
+    -webkit-box-shadow: inset 0 0 0 10em #543ab7;
+            box-shadow: inset 0 0 0 10em #543ab7;
+  }
+}
+
 .header .navbar-sticky-dark {
   background-color: #ffffff;
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.08);
@@ -702,6 +838,10 @@ a {
   .header .offcanvas-header .navbar-brand {
     color: #ffffff;
   }
+}
+
+.header .offcanvas-header .btn-close {
+  background: none;
 }
 
 @media (min-width: 992px) {
